tests/compile_fail/ktstr_test_payload_duplicate.stderr
error: duplicate `payload = ...` — each test declares at most one primary payload; extras belong in `workloads = [..]`
  --> tests/compile_fail/ktstr_test_payload_duplicate.rs:30:29
   |
30 | #[ktstr_test(payload = FIO, payload = STRESS)]
   |                             ^^^^^^^
